# pathdiv

./: Cargo.toml  README.md
examples/: sample.rs
src/: lib.rs  pathdiv.rs
tests/: join.rs
