[package]
name = "pathdiv"
version = "0.1.0"
authors = ["suzusuzu <s.suzugamine@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This library provides an API similar to pathlib of python."
repository = "https://github.com/suzusuzu/pathdiv"
readme = "README.md"
keywords = ["path", "pathlib"]
categories = ["development-tools"]

[dependencies]
